...

      // Handle Division by Zero or other invalid mathematical results
      if (eval.isInfinite || eval.isNaN) {
        emit(
          state.copyWith(
            result: '',
            errorMessage: 'Invalid mathematical operation',
          ),
        );
        return;
      }

      String result = eval.toString();
...

      emit(
        state.copyWith(expression: "", result: result, history: updatedHistory),
      );
    } catch (e) {
      // Catch syntax errors (e.g., malformed expressions like "5++5")
      emit(state.copyWith(result: '', errorMessage: 'Malformed expressions'));
    }
  }

  void _onToggleSignPressed(
    ToggleSignPressed event,
    Emitter<CalculatorState> emit,
...
