...
import 'package:flutter_bloc/flutter_bloc.dart';

class ButtonGrid extends StatelessWidget {
  const ButtonGrid({super.key});

  static const List<String> _buttons = [
    'AC',
    '+/-',
    '%',
    '÷',
    '7',
    '8',
    '9',
...
